Minor layout fixes before starting responsive layouts on smaller screens.

--- a/src/components/main-content/main-content.css
+++ b/src/components/main-content/main-content.css
@@ -20,9 +20,12 @@
 }
 
 .lessons-container {
+    flex: 1;
+
     align-self: stretch;
 
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: flex-start;
 }
